public/stylesheets/main.css
/* ... */
.open-caret {
  transform: rotate(180deg);
  transition: all .25s ease-out;
}

/*Home page end*/

/*Calendar*/

*, *:before, *:after {
  box-sizing:border-box;
}

.group {
  &:after {
    content: "";
    display: table;
    clear: both;
  }
}

/*.calendar-wrapper {*/
  /*width:360px;*/
  /*width: 100%;*/
  /*height: 100%;*/
  /*min-height: 700px;*/
  /*margin:3em auto;*/
  /*padding:2em;
  border:1px solid #d1d1d1;
  border-radius:5px;
  background:#fff;

}*/

table.table-calendar {
  clear:both;
  width:100%;
  border:1px solid #d1d1d1;
  border-radius:5px;
  border-collapse:collapse;
  color:#555;
  background-color: #f1f1f1;
  border-spacing: 4px;
  border-collapse: separate;
}

td.days {
  text-align:left;
  height: 20px;
  /*height: 100%;*/

  /*border-right:1px solid #d1d1d1;
  border-top:1px solid #d1d1d1;*/
  width:14.28%; /* 14.28% = 100% / 7 */
  background-color: #f1f1f1;
}

td.calendar {
  text-align: center;
  vertical-align: middle;
  border-right:1px solid #d1d1d1;
  border-top:1px solid #d1d1d1;
  border-radius:5px;
  width:14.28%; /* 14.28% = 100% / 7 */

}
td.not-current {
  color:#aaa;
  text-align: left;
  vertical-align: top;
}
td.normal, td.today {
  height:130px;
  text-align: left;
  vertical-align: top;
  background-color: #e5e5e5;
}

td.normal {
  /*background-color: #e5e5e5;*/
}

td.today {

  font-weight:700;
  color:#ff9da2;
  /*font-size:1.5em;*/
  /*background-color: #eee;*/
  border:1px solid #d1d1d1;
}


.calendar-card {
  border-radius: 5px!important;
  -webkit-box-shadow: unset;
  -moz-box-shadow: unset;
  box-shadow: unset;
  background-color: #fff;
}
.calendar-card:hover {
  border-color: #888;
  cursor:pointer;
}

.calendar-game-time {
  font-size: .8em;
  color: #888
}

thead td.calendar {
  border:none;
  color:#555;
  text-align: left;
  /*text-transform:uppercase;*/
  font-size:1.0em;
  padding-top: 5px;
  padding-left: 5px;
}
#btnPrev, #btnNext {
  float:left;
  background:transparent;
  border:none;
  outline:none;
  font-size:1em;
  color:#555;
  cursor:pointer;
  font-family:"Questrial", sans-serif;
  /*text-transform:uppercase;*/
  transition:all 0.2s ease;
  margin-bottom:20px;
}

#game-time{
  float:right;
}

.game-info {
  display: none;
  position: absolute;
  left: 0;
  right: 0;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  height: 70%;
  width: 60%;
  background-color: #f1f1f1;
  /*Display over everything else*/
  z-index: 10;
}

.game-info-opacity{
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  background: #555;
  opacity: 0.5;
  /*Display over everything else except game-info*/
  z-index: 9;
}

.card-roster {
  width:100%;
  border:1px solid #d1d1d1;
  border-radius:5px;
  color:#555;
  background-color: #fff;
}

#team1-slots, #team2-slots {
  float: right;
}

/*End Calendar*/


/*Players page*/
.loading-ring {
    display:    none;
    position:   absolute;
    height:     100%;
    width:      100%;
    background: url('http://i.stack.imgur.com/FhHRx.gif') no-repeat;
}
/*Player page end*/



/*Quick link signup*/

.quick-link-bg{

  background-image: url('/images/the-radiant.jpg');
  margin-top: 0px;
  width: 100%;
  height: 100%;
  background-size: cover;
}

.quick-link-box{
  border: 3px solid #ddd; /* Add a grey border */
}

.quick-link-title{
  color: #fff;
}

.quick-link-container{
  padding: 50px;
  background-color: rgba(50, 50, 50, 0.5);
}

/*Quick link signup end*/


/*Random*/
.grey-text{
  color: #555;
}
.about-text{
  font-size: 1.1em;
}

ul,li{
  margin-top: 4px;
}
/*Random end*/

footer{
  bottom: 0;
  text-align: center;
  background-color: #d1d1d1 !important;
}

/* The alert message box */
.alert {
    text-align: center;
    font-size: 1.0em;
    margin-bottom: 20px;
    color: white;
    transition: opacity 0.6s;
    margin-left: auto;
    margin-right: auto;
    padding: 0px;
}

.alert-red{
      padding: 15px;
      background-color: #f44336; /* Red */
}

.alert-green{
      padding: 15px;
      background-color: #4CAF50; /* Green */
}
/* The close button */
.closebtn {
    margin-left: 10px;
    color: white;
    font-weight: bold;

    font-size: 22px;
    line-height: 20px;
    cursor: pointer;
    transition: 0.3s;
}

/* When moving the mouse over the close button */
.closebtn:hover {
    color: black;
}


tr.add-row:hover{
  background-color: #d1d1d1;
}
tr.add-row:active{
  background-color: #555555;
}

.remove-row:hover{
  background-color: #d1d1d1;
}

.remove-row:active{
  background-color: #555555;
}

.remove-row{
  padding:15px;
  border-style: solid;
  border-color: #d1d1d1;
  border-width: 1px
}

footer{
  bottom: 0;
  text-align: center;
}


/*Hover.css stuff*/

/* Float */
.hvr-float {
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.hvr-float:hover, .hvr-float:focus, .hvr-float:active {
  -webkit-transform: translateY(-8px);
  transform: translateY(-8px);
}

/* Fade */
.hvr-fade {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
  overflow: hidden;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: color, background-color;
  transition-property: color, background-color;
}
.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
  background-color: #052D49;
  color: white;
}

.hvr-fade-discord:hover, .hvr-fade-discord:focus, .hvr-fade-discord:active {
  background-color: #2C2F33 !important;
  color: white;
}

